<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    
    android:orientation="vertical"
    android:layout_margin="16dp"

    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"

        android:orientation="vertical"
        android:layout_margin="16dp"

        >


        <EditText
            android:id="@+id/editText_Distance"
            android:padding="16dp"
            android:hint="Distance"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance_km"/>


        </LinearLayout>

        <EditText
            android:id="@+id/editText_Price"
            android:padding="16dp"
            android:hint="Price"
            android:inputType="numberDecimal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_liter"/>



        </LinearLayout>

        <EditText
            android:id="@+id/editText_Autonomy"
            android:padding="16dp"
            android:hint="Autonomy"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:orientation="horizontal">
            <TextView
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Autonomia Km/litro"
                android:layout_weight="1"/>


        </LinearLayout>
        <TextView
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seuGastoSera"/>

        <TextView
            android:id="@+id/textViewResult"
            android:layout_marginTop="10dp"
            android:textSize="30dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total"/>

        <Button

            android:id="@+id/button_calculate"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:text="@string/calculate"

            />




    </LinearLayout>

</ScrollView>


